move some abcssp/sto files to common

--- a/abcssp/intro/chp_intro.tex
+++ b/abcssp/intro/chp_intro.tex
@@ -41,13 +41,13 @@
 \section{Order space concepts}
   \input{intro/order.tex}
   \input{sto/lattice.tex}
-  \input{sto/isomorphic.tex}
-  \input{sto/argmin.tex}
+  \input{../common/isomorphic.tex}
+  \input{../common/argmin.tex}
 
 \section{Metric space concepts}
-  \input{sto/sspmetrics.tex}
-  \input{sto/isometric.tex}
-  \input{sto/oms.tex}
+  \input{../common/sspmetrics.tex}
+  \input{../common/isometric.tex}
+  \input{../common/oms.tex}
 
 \section{Traditional probability}
   \input{intro/probability.tex}
