--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -633,7 +633,19 @@
   url          = {http://www.eirene.de/Devroye.pdf},
   isbn         = {0387963057},
   }
-  
+
+@book{devroye2013,
+  isbn         = {9781461207115},
+  isbn10       = {1461207118},
+  title        = {A Probabilistic Theory of Pattern Recognition},
+  volume       = {31},
+  series       = {Stochastic Modelling and Applied Probability},
+  author       = {Luc Devroye and Laszlo Gy/:orfi and Gabor Lugosi},
+  publisher    = {Springer Science \& Business Media},
+  year         = {2013},
+  pages        = {638},
+  }
+
 @book{ewins1985,
   isbn10       = {086380036X},
   isbn         = {9780863800368},
