--- a/common/expectation.tex
+++ b/common/expectation.tex
@@ -263,6 +263,7 @@ and illustrated in \prefpp{fig:jensen}.
 %--------------------------------------
 \begin{corollary}[\thmd{Jensen's inequality}]
 \footnote{
+  \citerpgc{wasserman2013}{66}{9780387217369}{``4.9 Theorem (Jensen's inequality)."},
   \citerpgc{shao2003}{31}{0387953825}{``1.3 Distributions and Their Characteristics"},
   \citerp{cover}{25},
   \citerpp{jensen1906}{179}{180}
@@ -327,7 +328,8 @@ are the following:
 \footnote{
   \citerpgc{suhov2005}{145}{0521847664}{(2.69)},
   \citerpgc{allen2018}{490}{1447174208}{18.3.4 The Law of the Unconscious Statistician},
-  \citerpgc{papoulis1990}{124}{0137116985}{Fundamental Theorem}
+  \citerpgc{papoulis1990}{124}{0137116985}{Fundamental Theorem},
+  \citerpgc{wasserman2013}{48}{9780387217369}{``3.6 Theorem (The Rule of the Lazy Statistician)."}
   }
 %---------------------------------------
 \thmbox{
@@ -342,6 +344,7 @@ are the following:
 %---------------------------------------
 \begin{theorem}[\thmd{Markov's inequality}]
 \footnote{
+  \citerpgc{wasserman2013}{63}{9780387217369}{``4.1 Theorem (Markov's inequality)."},
   \citerp{ross}{395}
   }
 \label{thm:markovineq}
@@ -374,6 +377,7 @@ $a\in(0,\infty)$. Then
 \index{Chebyshev's inequality}
 \index{theorems!Chebyshev's inequality}
 \footnote{
+  \citerpgc{wasserman2013}{64}{9780387217369}{``4.2 Theorem (Chebyshev's Inequality)."},
   \citerp{ross}{396}
   }
 %---------------------------------------
@@ -409,6 +413,14 @@ Let $\rvX$ be a \fncte{random variable} with mean $\mu$ and variance $\sigma^2$.
   }
 \end{theorem}
 
+More:
+\begin{listi}
+  \item \citerpgc{wasserman2013}{64}{9780387217369}{``4.4 Theorem (Hoeffding's Inequality)."}.
+        \citerppgc{devroye2013}{122}{123}{9781461207115}{``Theorem 8.1 (Hoeffding (1963))."}
+  \item \citerpgc{wasserman2013}{65}{9780387217369}{``4.5 Theorem."}
+  \item \citerpgc{wasserman2013}{65}{9780387217369}{``4.7 Theorem (Mill's Inequality)."}
+\end{listi}
+  
 %=======================================
 \section{Conditional expectation}
 %=======================================
@@ -565,6 +577,9 @@ The next theorem gives some results that follow directly from vector space
 properties:
 %---------------------------------------
 \begin{theorem}
+\footnote{
+  \citerpgc{wasserman2013}{66}{9780387217369}{``4.8 Theorem (Cauchy-Schwartz Inequality)."}
+  }
 %---------------------------------------
 Let $\ps$ be a \structe{probability space} with \ope{expectation} functional $\pE$.
 \thmbox{\begin{array}{F >{\ds}r c >{\ds}l M}
