--- a/graphmath/category.tex
+++ b/graphmath/category.tex
@@ -14,18 +14,18 @@
  \graphic{ballinopen}
 % \graphic{balloutball}
  \graphic{baslat_cheby}
- \graphic{baslat_cheby_yellow}
+%\graphic{baslat_cheby_yellow}
  \graphic{baslat_cose}
- \graphic{baslat_cose_yellow}
+%\graphic{baslat_cose_yellow}
  \graphic{baslat_cosh}
- \graphic{baslat_cosh_yellow}
+%\graphic{baslat_cosh_yellow}
  \graphic{baslat_d1}
- \graphic{baslat_d1_yellow}
+%\graphic{baslat_d1_yellow}
  \graphic{baslat_d2}
- \graphic{baslat_d2_yellow}
+%\graphic{baslat_d2_yellow}
 %\graphic{baslat_d3}
  \graphic{baslat_h3}
- \graphic{baslat_h3_yellow}
+%\graphic{baslat_h3_yellow}
  \graphic{baslat_haar}
 %\graphic{benzenering_xy}
  \graphic{bijective_x4y4}
@@ -844,39 +844,23 @@
 %\graphic{2p2roots}
  \graphic{bspline_phi_h}
  \graphic{bspline_psi_g}
- \graphic{bspline_pz}
 %\graphic{circle}
- \graphic{d10_phi_h}
- \graphic{d10_psi_g}
- \graphic{d11_phi_h}
- \graphic{d11_psi_g}
- \graphic{d12_phi_h}
- \graphic{d12_psi_g}
- \graphic{D12_pz}
- \graphic{d16_phi_h}
- \graphic{d16_psi_g}
- \graphic{D16_pz}
  \graphic{d1_g}
  \graphic{d1_h}
  \graphic{d1_phi}
  \graphic{d1_phi_h}
  \graphic{d1_psi}
  \graphic{d1_psi_g}
- \graphic{D1_pz}
 %\graphic{d2s}
 %\graphic{d2sc}
 %\graphic{d2w}
 %\graphic{d2wc}
  \graphic{d2_phi_h}
  \graphic{d2_psi_g}
- \graphic{D2_pz}
-%\graphic{D32_pz}
  \graphic{d3_phi_h}
  \graphic{d3_psi_g}
- \graphic{D3_pz}
  \graphic{d4_phi_h}
  \graphic{d4_psi_g}
- \graphic{D4_pz}
  \graphic{d5_phi_h}
  \graphic{d5_psi_g}
  \graphic{d6_phi_h}
@@ -885,10 +869,16 @@
  \graphic{d7_psi_g}
  \graphic{d8_phi_h}
  \graphic{d8_psi_g}
- \graphic{D8_pz}
  \graphic{d9_phi_h}
  \graphic{d9_psi_g}
- \graphic{Dp_pz}
+ \graphic{d10_phi_h}
+ \graphic{d10_psi_g}
+ \graphic{d11_phi_h}
+ \graphic{d11_psi_g}
+ \graphic{d12_phi_h}
+ \graphic{d12_psi_g}
+ \graphic{d16_phi_h}
+ \graphic{d16_psi_g}
 %\graphic{fwt_diagram}
  \graphic{haar0_sin_a}
  \graphic{haar0_sin_t}
@@ -907,30 +897,40 @@
  \graphic{latwav}
  \graphic{mexhatwavelet}
  \graphic{morletwavelet}
- \graphic{S10_pz}
- \graphic{S11_pz}
- \graphic{s12_phi_h}
- \graphic{s12_psi_g}
- \graphic{S12_pz}
- \graphic{S13_pz}
- \graphic{S14_pz}
- \graphic{S15_pz}
- \graphic{s16_phi_h}
- \graphic{s16_psi_g}
- \graphic{S16_pz}
- \graphic{S17_pz}
  \graphic{s4_phi_h}
  \graphic{s4_psi_g}
+ \graphic{s8_phi_h}
+ \graphic{s8_psi_g}
+ \graphic{s12_phi_h}
+ \graphic{s12_psi_g}
+ \graphic{s16_phi_h}
+ \graphic{s16_psi_g}
+ \graphic{tent_phi_h}
+ \graphic{tent_psi_g}
+ \graphic{bspline_pz}
+ \graphic{Dp_pz}
+ \graphic{D1_pz}
+ \graphic{D2_pz}
+ \graphic{D3_pz}
+ \graphic{D4_pz}
+ \graphic{D8_pz}
+ \graphic{D12_pz}
+ \graphic{D16_pz}
+%\graphic{D32_pz}
  \graphic{S4_pz}
  \graphic{S5_pz}
  \graphic{S6_pz}
  \graphic{S7_pz}
- \graphic{s8_phi_h}
- \graphic{s8_psi_g}
  \graphic{S8_pz}
  \graphic{S9_pz}
- \graphic{tent_phi_h}
- \graphic{tent_psi_g}
+ \graphic{S10_pz}
+ \graphic{S11_pz}
+ \graphic{S12_pz}
+ \graphic{S13_pz}
+ \graphic{S14_pz}
+ \graphic{S15_pz}
+ \graphic{S16_pz}
+ \graphic{S17_pz}
 %              91 File(s)        371,149 bytes
 %=======================================
 \chapter{Symbolic Sequence Processing}
@@ -1072,12 +1072,12 @@
 %\graphic{hanninglp50}
  \graphic{larc_ball(00_00_05)}
  \graphic{larc_ball(0_0_-1)}
- \graphic{larc_ball(0_0_-10)}
- \graphic{larc_ball(0_0_-2)}
- \graphic{larc_ball(0_0_-3)}
- \graphic{larc_ball(0_0_-5)}
- \graphic{larc_ball(0_0_0)}
- \graphic{larc_ball(0_0_1)}
+%%\graphic{larc_ball(0_0_-10)}
+%%\graphic{larc_ball(0_0_-2)}
+%%\graphic{larc_ball(0_0_-3)}
+%%\graphic{larc_ball(0_0_-5)}
+%%\graphic{larc_ball(0_0_0)}
+%%\graphic{larc_ball(0_0_1)}
  \graphic{larc_ball(1_1_1)}
  \graphic{larc_def}
  \graphic{larc_earc_compare}
@@ -1090,7 +1090,7 @@
  \graphic{larc_trieq}
  \graphic{limrp0}
  \graphic{limrp0Rpq}
- \graphic{mca_R2_balls}
+ \graphicw{mca_R2_balls}
  \graphic{rdie_16hp}
  \graphic{rdie_16ones}
  \graphic{rdie_50hp}
