--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -858,6 +858,19 @@
   urla         = {http://www.amazon.com/dp/0023535717},
   }
 
+@article{hoeffding1963,
+  author       = {Wassily Hoeffding},
+  year         = {1963},
+  month        = {March},
+  title        = {Probability inequalities for sums of bounded random variables},
+  journal      = {Journal of the American Statistical Association},
+  volume       = {58},
+  number       = {301},
+  pages        = {13--30},
+  doi          = {10.1080/01621459.1963.10500830},
+  url          = {https://repository.lib.ncsu.edu/bitstream/handle/1840.4/2170/ISMS_1962_326.pdf},
+  }
+
 @article{hotelling1933,
   author       = {Harold Hotelling},
   year         = {1933},
