--- a/common/expectation.tex
+++ b/common/expectation.tex
@@ -225,104 +225,6 @@ Let $\rvX$ be a \fncte{random variable} on a \structe{probability space} $\ps$.
 \end{align*}
 \end{proof}
 
-\begin{figure}[ht]
-\setlength{\unitlength}{0.3mm}%
-\begin{center}%
-\begin{picture}(200,110)(-50,-10)%
-  \thicklines
-  \color{axis}%
-    \put(  0,  0){\line(1, 0){120}}%
-    \put(  0,  0){\line(0, 1){100}}%
-    \qbezier[20](0,60)(30,60)(60,60)%
-    \qbezier[20](60,0)(60,30)(60,60)%
-  \color{blue}%
-    \qbezier(33,100)(85,0)(110,100)%
-    \put( 60, 60){\circle*{5}}%
-  \color{red}%
-    \put( 20,100){\line(1,-1){80}}%
-  \color{label}%
-  \put(125,  0){\makebox(0,0)[l]{$x$}}%
-  \put( -5, 60){\makebox(0,0)[r]{$\ff(\pE\rvX)$}}%
-  \put( 60, -5){\makebox(0,0)[t]{$\pE\rvX$}}%
-  \put(130,60){\vector(-1,0){32}}%
-  \put(130,40){\vector(-1,0){47}}%
-  \put(135,60){\makebox(0,0)[l]{$\ff(x)$ (convex function)}}%
-  \put(135,40){\makebox(0,0)[l]{$mx+c$ (support line)}}%
-\end{picture}
-\end{center}
-\caption{
-  Jensen's inequality
-  \label{fig:jensen}
-  }
-\end{figure}
-
-\fncte{Jensen's inequality} is an extremely useful application of \prope{convex}ity \xref{def:convex} to the
-\ope{expectation} operator.
-Jensen's inequality is stated in \pref{cor:jensen} (next)
-and illustrated in \prefpp{fig:jensen}.
-%--------------------------------------
-\begin{corollary}[\thmd{Jensen's inequality}]
-\footnote{
-  \citerpgc{wasserman2013}{66}{9780387217369}{``4.9 Theorem (Jensen's inequality)."},
-  \citerpgc{shao2003}{31}{0387953825}{``1.3 Distributions and Their Characteristics"},
-  \citerp{cover}{25},
-  \citerpp{jensen1906}{179}{180}
-  }
-\label{cor:jensen}
-%--------------------------------------
-Let $\ff$ be a function in $\clFrr$ and $\rvX$ be a \fncte{random variable} on $\ps$.
-\corbox{
-  \brb{\text{$\ff$ is \prope{convex}}} 
-  \quad\implies\quad 
-  \brb{\ff(\pE\rvX) \le \pE\ff(\rvX)}
-  }
-\end{corollary}
-\begin{proof}
-\begin{enumerate}
-  \item Proof 1:
-Let $mx+c$ be a ``support line" under $\ff(x)$ \xref{fig:jensen} such that
-\[
-  \begin{array}{rcll}
-    mx+c &<& \ff(x) & \mbox{for } x\ne \pE\rvX \\
-    mx+c &=& \ff(x) & \mbox{for } x=\pE\rvX.
-  \end{array}
-\]
-Then
-\begin{align*}
-  \ff(\pE\rvX)
-    &=   m[\pE\rvX] + c
-  \\&=   \pE[mX + c]
-  \\&\le \pE\ff(\rvX)
-\end{align*}
-
-  \item Proof 2 (alternate proof):
-    \begin{align*}
-      \ff\brp{\pE\rvX}
-        &\eqd \ff\brp{\sum_{x\in\pse} x \psp(x)}
-      \\&\le \sum_{x\in\pse} \ff(x) \psp(x)
-        && \text{by \thme{Jensen's inequality} for convex sets}
-        && \text{\xref{thm:jensenineq}}
-    \end{align*}
-\end{enumerate}
-\end{proof}
-
-%--------------------------------------
-\begin{example}
-\footnote{
-  \citerppgc{shao2003}{31}{32}{0387953825}{``Example 1.18"},
-  \citerpgc{dekking2006}{110}{1846281687}{``8.5 Solutions to the quick exercises"}
-  }
-\label{ex:jensen}
-%--------------------------------------
-Some examples of \thme{Jensen's Inequality} \xref{cor:jensen} applied to the \ope{expectation operator}
-are the following:
-\exbox{\begin{array}{c|c|c}
-    \ds \brp{\pE\rvX}^{-1}  <   \pE\brp{\rvX^{-1}}
-   &\ds \pE\brp{\log\rvX}   <   \log\brp{\pE\rvX}
-   &\ds e^{-\pE\rvX}        \le \pE\brs{e^{-\rvX}}
-\end{array}}
-\end{example}
-
 %---------------------------------------
 \begin{theorem}[\thmd{Law of the Unconscious Statistician}]
 \footnote{
@@ -338,134 +240,6 @@ are the following:
 \end{theorem}
 
 
-%=======================================
-\section{Expectation inequalities}
-%=======================================
-%---------------------------------------
-\begin{theorem}[\thmd{Markov's inequality}]
-\footnote{
-  \citerpgc{wasserman2013}{63}{9780387217369}{``4.1 Theorem (Markov's inequality)."},
-  \citerp{ross}{395}
-  }
-\label{thm:markovineq}
-%---------------------------------------
-Let $\rvX:\Omega\to[0,\infty)$ be a non-negative valued \fncte{random variable} and
-$a\in(0,\infty)$. Then
-\thmbox{ \psp\setn{\rvX\ge a} \le \frac{1}{a} \pE\rvX }
-\end{theorem}
-\begin{proof}
-\begin{align*}
-  I &\eqd \left\{ \begin{array}{l@{\hspace{4ex}\mbox{for}\hspace{4ex}}l}
-    1 &\rvX\ge a \\
-    0 &\rvX < a
-    \end{array}\right.
-\\
-  aI &\le\rvX           \\
-   I &\le \frac{1}{a}\rvX \\
-   \pE I &\le \pE\left(\frac{1}{a}\rvX\right) \\
-\\
-   \psp\setn{\rvX\ge a}
-     &= 1\cdot\psp\setn{\rvX\ge a} + 0\cdot\psp\setn{\rvX<a}
-   \\&= \pE I
-   \\&\le \pE\left(\frac{1}{a}\rvX \right)
-   \\&=   \frac{1}{a}\pE\rvX
-\end{align*}
-\end{proof}
-
-%---------------------------------------
-\begin{theorem}[Chebyshev's inequality]
-\index{Chebyshev's inequality}
-\index{theorems!Chebyshev's inequality}
-\footnote{
-  \citerpgc{wasserman2013}{64}{9780387217369}{``4.2 Theorem (Chebyshev's Inequality)."},
-  \citerp{ross}{396}
-  }
-%---------------------------------------
-Let $\rvX$ be a \fncte{random variable} with mean $\mu$ and variance $\sigma^2$.
-\thmbox{ \psp\setn{\abs{\rvX-\mu}\ge a} \le \frac{\sigma^2}{a^2}}
-\end{theorem}
-\begin{proof}
-\begin{align*}
-  \psp\setn{\abs{\rvX-\mu} \ge a}
-    &=   \psp\setn{ (\rvX-\mu)^2 \ge a^2}
-  \\&\le \frac{1}{a^2} \pE(\rvX-\mu)^2 
-    && \text{by \thme{Markov's inequality}}
-    && \text{\xref{thm:markovineq}}
-  \\&=   \frac{\sigma^2}{a^2}
-\end{align*}
-\end{proof}
-
-%---------------------------------------
-\begin{theorem}[\thmd{Kolmogorov's inequality}]
-\footnote{
-  \citerpc{wilks1963}{107}{\textsection 4.5 ``Kolmogorov's inequality"}
-  }
-%---------------------------------------
-Let $\rvX$ be a \fncte{random variable} with mean $\mu$ and variance $\sigma^2$.
-\thmbox{
-  \brb{\begin{array}{FMD}
-      (A).&$\seqn{\rvx_n}$ are \prope{independent} & and
-    \\(B).&Each $\rvx_n$ has \prope{zero-mean}     & and
-    \\(C).&Each $\rvx_n$ has variance $\pvar$
-  \end{array}}
-  \implies
-  \psP\brs{\abs{\sum_{n=1}^{\xN} \rvx_n} < \lambda\sum_{n=1}^{\xN} \rvx_n^2} \ge 1 - \frac{1}{\lambda^2}
-  }
-\end{theorem}
-
-More:
-\begin{listi}
-  \item \citerpgc{wasserman2013}{64}{9780387217369}{``4.4 Theorem (Hoeffding's Inequality)."}.
-        \citerppgc{devroye2013}{122}{123}{9781461207115}{``Theorem 8.1 (Hoeffding (1963))."}
-  \item \citerpgc{wasserman2013}{65}{9780387217369}{``4.5 Theorem."}
-  \item \citerpgc{wasserman2013}{65}{9780387217369}{``4.7 Theorem (Mill's Inequality)."}
-\end{listi}
-  
-%=======================================
-\section{Conditional expectation}
-%=======================================
-Sometimes the problem of finding the expected value of a \fncte{random variable} $\rvX$
-can be simplified by ``conditioning $\rvX$ on $\rvY$".
-It has already been pointed out in \prefpp{sec:pE_defs} 
-that the expected value $\pEx\rvX$  of $\rvX$ is \textbf{not random}.
-On the other hand, 
-note that $\pE(\rvX|\rvY)$ \textbf{is random}.
-This is because $\pE(\rvX|\rvY)$ is a function of $\rvY$.
-That is, once we know that $\rvY$ equals some fixed value $y$
-(like $0$ or $2.7$ or $-5.1$) then $\pE(\rvX|\rvY=y)$ is also fixed.
-However, if we don't know the value of $\rvY$,
-then $\rvY$ is still a \fncte{random variable} and the expression $\pE(\rvX|\rvY)$
-is also random (a function of \fncte{random variable} $\rvY$).
-
-%---------------------------------------
-\begin{theorem}
-\footnote{
-  \citerpc{jazwinski1970}{40}{``Theorem 2.9 (Conditional Expectations)"},
-  \citerpg{jazwinski2007}{40}{9780486318196} %{``Theorem 2.9 (Conditional Expectations)"}
-  }
-%---------------------------------------
-Let $\rvX$ and $\rvY$ be \fncte{random variable}s. Then
-\thmbox{\pEx{\rvX} = \pEy\pEx[x|y](\rvX|\rvY) }
-\end{theorem}
-\begin{proof}
-\begin{align*}
-   \pEy\pEx[x|y](\rvX|\rvY)
-     &\eqd \pEy \brs{ \int_{x\in\R}x \pp(\rvX=x|\rvY) \dx}
-     && \text{by definition of $\pE$}
-     && \text{\xref{def:pE}}
-   \\&\eqd \int_{y\in\R} \brs{\int_{x\in\R}x \pp(x|\rvY=y) \dx } \pp(y) \dy
-     && \text{by definition of $\pE$}
-     && \text{\xref{def:pE}}
-   \\&=    \int_{y\in\R} \int_{x\in\R}x \pp(x|y)\pp(y) \dx   \dy
-   \\&=    \int_{x\in\R}x \int_{y\in\R} \pp(x,y) \dy   \dx
-     && \text{by \prefp{thm:pdf_cond}}
-   \\&=    \int_{x\in\R}x \pp(x) \dx
-     && \text{by \prefp{thm:pdf_cond}}
-   \\&\eqd \pEx\rvX
-     && \text{by definition of $\pE$}
-     && \text{\xref{def:pE}}
-\end{align*}
-\end{proof}
 
 %=======================================
 \section{Expectation inner product space}
@@ -576,44 +350,331 @@ in \structe{probability space} $\ps$.
 The next theorem gives some results that follow directly from vector space
 properties:
 %---------------------------------------
-\begin{theorem}
-\footnote{
-  \citerpgc{wasserman2013}{66}{9780387217369}{``4.8 Theorem (Cauchy-Schwartz Inequality)."}
-  }
+\begin{theorem}[\thmd{Parallelogram Law}]
 %---------------------------------------
 Let $\ps$ be a \structe{probability space} with \ope{expectation} functional $\pE$.
-\thmbox{\begin{array}{F >{\ds}r c >{\ds}l M}
-  (1).&   \sqrt{\pE\left(\sum_{n=1}^{\xN}\rvX_n\right)}
-      &\  \le& \sum_{n=1}^{\xN} \pE(\rvX_nX_n^\ast)
-      &   (\ineqe{Generalized triangle inequality})
-     \\
-  (2).&   \abs{\pE(\rvX\rvY^\ast)}^2
-      &   \le& \pE(\rvX\rvX^\ast)\:\pE(YY^\ast)
-      &   (\ineqe{Cauchy-Schwartz inequality})
-     \\
-  (3).&   2\pE(\rvX\rvX^\ast) + 2\pE(YY^\ast)
-      &=& \mc{2}{M}{$\ds\pE[(\rvX+\rvY)(\rvX+\rvY)^\ast] + \pE[(\rvX-Y)(\rvX-Y)^\ast]$}
-    \\&&&(\thme{Parallelogram Law})
-  \end{array}}
+\thmbox{
+          2\pE(\rvX\rvX^\ast) + 2\pE(\rvY\rvY^\ast)
+       =  \pE[(\rvX+\rvY)(\rvX+\rvY)^\ast] + \pE[(\rvX-Y)(\rvX-\rvY)^\ast]
+  }
 \end{theorem}
 \begin{proof}
 \begin{enumerate}
   \item $\opair{\clFor}{\pE(\rvx,\rvy)}$ is an \structe{inner product space}. Proof: \prefpp{thm:prb_vspace}.
 
-  \item Because $\opair{\clFor}{\pE(\rvx,\rvy)}$ is an \structe{inner product space}, the other properties follow:
-        \\\indentx\begin{tabular}{llll}
-          1. & \ineqe{Generalized triangle inequality}:
-             & \pref{thm:norm_tri}
-             & \prefpo{thm:norm_tri}
-             \\
-          2. & \ineqe{Cauchy-Schwartz inequality}:
-             & \pref{thm:cs}
-             & \prefpo{thm:cs}
-             \\
-          3. & \thme{Parallelogram Law}:
-             & \pref{thm:parallelogram}
-             & \prefpo{thm:parallelogram}
-        \end{tabular}
+  \item Because $\opair{\clFor}{\pE(\rvx,\rvy)}$ is an \structe{inner product space}, the \thme{Parallelogram Law} follows \xref{thm:parallelogram}.
 \end{enumerate}
 \end{proof}
 
+%=======================================
+\section{Expectation inequalities}
+%=======================================
+\begin{figure}[ht]
+\setlength{\unitlength}{0.3mm}%
+\begin{center}%
+\begin{picture}(200,110)(-50,-10)%
+  \thicklines
+  \color{axis}%
+    \put(  0,  0){\line(1, 0){120}}%
+    \put(  0,  0){\line(0, 1){100}}%
+    \qbezier[20](0,60)(30,60)(60,60)%
+    \qbezier[20](60,0)(60,30)(60,60)%
+  \color{blue}%
+    \qbezier(33,100)(85,0)(110,100)%
+    \put( 60, 60){\circle*{5}}%
+  \color{red}%
+    \put( 20,100){\line(1,-1){80}}%
+  \color{label}%
+  \put(125,  0){\makebox(0,0)[l]{$x$}}%
+  \put( -5, 60){\makebox(0,0)[r]{$\ff(\pE\rvX)$}}%
+  \put( 60, -5){\makebox(0,0)[t]{$\pE\rvX$}}%
+  \put(130,60){\vector(-1,0){32}}%
+  \put(130,40){\vector(-1,0){47}}%
+  \put(135,60){\makebox(0,0)[l]{$\ff(x)$ (convex function)}}%
+  \put(135,40){\makebox(0,0)[l]{$mx+c$ (support line)}}%
+\end{picture}
+\end{center}
+\caption{
+  \thme{Jensen's Inequality}
+  \label{fig:jensen}
+  }
+\end{figure}
+
+\fncte{Jensen's Inequality} is an extremely useful application of \prope{convex}ity \xref{def:convex} to the
+\ope{expectation} operator.
+Jensen's inequality is stated in \pref{cor:jensen} (next)
+and illustrated in \prefpp{fig:jensen}.
+%--------------------------------------
+\begin{corollary}[\thmd{Jensen's inequality}]
+\footnote{
+  \citerpgc{wasserman2013}{66}{9780387217369}{``4.9 Theorem (Jensen's inequality)."},
+  \citerpgc{shao2003}{31}{0387953825}{``1.3 Distributions and Their Characteristics"},
+  \citerp{cover}{25},
+  \citerpp{jensen1906}{179}{180}
+  }
+\label{cor:jensen}
+%--------------------------------------
+Let $\ff$ be a function in $\clFrr$ and $\rvX$ be a \fncte{random variable} on $\ps$.
+\corbox{
+  \brb{\text{$\ff$ is \prope{convex}}} 
+  \quad\implies\quad 
+  \brb{\ff(\pE\rvX) \le \pE\ff(\rvX)}
+  }
+\end{corollary}
+\begin{proof}
+\begin{enumerate}
+  \item Proof 1:
+Let $mx+c$ be a ``support line" under $\ff(x)$ \xref{fig:jensen} such that
+\[
+  \begin{array}{rcll}
+    mx+c &<& \ff(x) & \mbox{for } x\ne \pE\rvX \\
+    mx+c &=& \ff(x) & \mbox{for } x=\pE\rvX.
+  \end{array}
+\]
+Then
+\begin{align*}
+  \ff(\pE\rvX)
+    &=   m[\pE\rvX] + c
+  \\&=   \pE[mX + c]
+  \\&\le \pE\ff(\rvX)
+\end{align*}
+
+  \item Proof 2 (alternate proof):
+    \begin{align*}
+      \ff\brp{\pE\rvX}
+        &\eqd \ff\brp{\sum_{x\in\pse} x \psp(x)}
+      \\&\le \sum_{x\in\pse} \ff(x) \psp(x)
+        && \text{by \thme{Jensen's inequality} for convex sets}
+        && \text{\xref{thm:jensenineq}}
+    \end{align*}
+\end{enumerate}
+\end{proof}
+
+%--------------------------------------
+\begin{example}
+\footnote{
+  \citerppgc{shao2003}{31}{32}{0387953825}{``Example 1.18"},
+  \citerpgc{dekking2006}{110}{1846281687}{``8.5 Solutions to the quick exercises"}
+  }
+\label{ex:jensen}
+%--------------------------------------
+Some examples of \thme{Jensen's Inequality} \xref{cor:jensen} applied to the \ope{expectation operator}
+are the following:
+\exbox{\begin{array}{c|c|c}
+    \ds \brp{\pE\rvX}^{-1}  <   \pE\brp{\rvX^{-1}}
+   &\ds \pE\brp{\log\rvX}   <   \log\brp{\pE\rvX}
+   &\ds e^{-\pE\rvX}        \le \pE\brs{e^{-\rvX}}
+\end{array}}
+\end{example}
+
+%---------------------------------------
+\begin{theorem}[\thmd{Markov's inequality}]
+\footnote{
+  \citerpgc{wasserman2013}{63}{9780387217369}{``4.1 Theorem (Markov's inequality)."},
+  \citerp{ross}{395}
+  }
+\label{thm:markovineq}
+%---------------------------------------
+Let $\rvX:\Omega\to[0,\infty)$ be a non-negative valued \fncte{random variable} and
+$a\in(0,\infty)$. Then
+\thmbox{ \psp\setn{\rvX\ge a} \le \frac{1}{a} \pE\rvX }
+\end{theorem}
+\begin{proof}
+\begin{align*}
+  I &\eqd \left\{ \begin{array}{l@{\hspace{4ex}\mbox{for}\hspace{4ex}}l}
+    1 &\rvX\ge a \\
+    0 &\rvX < a
+    \end{array}\right.
+\\
+  aI &\le\rvX           \\
+   I &\le \frac{1}{a}\rvX \\
+   \pE I &\le \pE\left(\frac{1}{a}\rvX\right) \\
+\\
+   \psp\setn{\rvX\ge a}
+     &= 1\cdot\psp\setn{\rvX\ge a} + 0\cdot\psp\setn{\rvX<a}
+   \\&= \pE I
+   \\&\le \pE\left(\frac{1}{a}\rvX \right)
+   \\&=   \frac{1}{a}\pE\rvX
+\end{align*}
+\end{proof}
+
+%---------------------------------------
+\begin{theorem}[Chebyshev's inequality]
+\index{Chebyshev's inequality}
+\index{theorems!Chebyshev's inequality}
+\footnote{
+  \citerpgc{wasserman2013}{64}{9780387217369}{``4.2 Theorem (Chebyshev's Inequality)."},
+  \citerp{ross}{396}
+  }
+%---------------------------------------
+Let $\rvX$ be a \fncte{random variable} with mean $\mu$ and variance $\sigma^2$.
+\thmbox{ \psp\setn{\abs{\rvX-\mu}\ge a} \le \frac{\sigma^2}{a^2}}
+\end{theorem}
+\begin{proof}
+\begin{align*}
+  \psp\setn{\abs{\rvX-\mu} \ge a}
+    &=   \psp\setn{ (\rvX-\mu)^2 \ge a^2}
+  \\&\le \frac{1}{a^2} \pE(\rvX-\mu)^2 
+    && \text{by \thme{Markov's inequality}}
+    && \text{\xref{thm:markovineq}}
+  \\&=   \frac{\sigma^2}{a^2}
+\end{align*}
+\end{proof}
+
+%---------------------------------------
+\begin{theorem}[\thmd{Kolmogorov's inequality}]
+\footnote{
+  \citerpc{wilks1963}{107}{\textsection 4.5 ``Kolmogorov's inequality"}
+  }
+%---------------------------------------
+Let $\rvX$ be a \fncte{random variable} with mean $\mu$ and variance $\sigma^2$.
+\thmbox{
+  \brb{\begin{array}{FMD}
+      (A).&$\seqn{\rvx_n}$ are \prope{independent} & and
+    \\(B).&Each $\rvx_n$ has \prope{zero-mean}     & and
+    \\(C).&Each $\rvx_n$ has variance $\pvar$
+  \end{array}}
+  \implies
+  \psP\brs{\abs{\sum_{n=1}^{\xN} \rvx_n} < \lambda\sum_{n=1}^{\xN} \rvx_n^2} \ge 1 - \frac{1}{\lambda^2}
+  }
+\end{theorem}
+
+%---------------------------------------
+\begin{theorem}[\thmd{Hoeffding's Inequality}]
+\footnote{
+  \citerppgc{devroye2013}{122}{123}{9781461207115}{``Theorem 8.1 (Hoeffding (1963))."},
+  \citerpgc{wasserman2013}{64}{9780387217369}{``4.4 Theorem (Hoeffding's Inequality)."},
+  \citer{hoeffding1963}
+  }
+%---------------------------------------
+Let $\seqn{\rvX_1, \rvX_2, \ldots, \rvX_{\xN}}$ be a sequence of \fncte{random variable}s.
+\thmbox{
+  \brb{\begin{array}{FrclD}
+      (A). & \pE\brp{\rvX_n} &=&   0                 & and
+    \\(B). & \rvX_n          &\in& \intcc{a_n}{b_n}  & and
+    \\(C). & \epsilon        &>&   0                 & and
+    \\(D). & t               &>&   0                 &
+  \end{array}}
+  \quad\implies\quad
+  \brb{\psP\brp{\sum_{n=1}^{\xN} \rvX_n} \le e^{-\epsilon t}\prod_{n=1}^{\xN}\exp\brs{\frac{t^2\brp{b_n-a_n}}{8}}
+      }
+  }
+\end{theorem}
+
+%---------------------------------------
+\begin{theorem}
+\footnote{
+  \citerpgc{wasserman2013}{65}{9780387217369}{``4.5 Theorem."}
+  }
+%---------------------------------------
+Let $\seqn{\rvX_1, \rvX_2, \ldots, \rvX_{\xN}}$ be a sequence of \fncte{random variable}s.
+\thmbox{
+  \brb{\begin{array}{FrclD}
+      (A). & rvX_n &\sim& \text{Bernoulli($p$)}      & and
+    \\(B). & \epsilon        &>&   0                 &
+  \end{array}}
+  \quad\implies\quad
+  \brb{\psP\brp{\abs{\frac{1}{\xN}\sum_{n=1}^{\xN} \rvX_n - p} > \epsilon} \le 2 e^{-2\xN\epsilon^2}
+      }
+  }
+\end{theorem}
+
+%---------------------------------------
+\begin{theorem}[\thmd{Mill's Inequality}]
+\footnote{
+  \citerpgc{wasserman2013}{65}{9780387217369}{``4.7 Theorem (Mill's Inequality)."}
+  }
+%---------------------------------------
+Let $\rvX$ be a \fncte{random variable}.
+\thmbox{
+  \brb{\begin{array}{FrclD}
+           & rvX_n &\sim& N(0,1)    &
+  \end{array}}
+  \quad\implies\quad
+  \brb{\psP\brp{\abs{\rvX}>x} \le \sqrt{frac{2}{\pi}} \frac{e^{-x^2/2}}{x}
+      }
+  }
+\end{theorem}
+
+%---------------------------------------
+\begin{theorem}[\thmd{Generalized Triangle Inequality}]
+%---------------------------------------
+Let $\ps$ be a \structe{probability space} with \ope{expectation} functional $\pE$.
+\thmbox{ \sqrt{\pE\brp{\sum_{n=1}^{\xN}\rvX_n}}
+     \le \sum_{n=1}^{\xN} \pE(\rvX_nX_n^\ast)
+  }
+\end{theorem}
+\begin{proof}
+\begin{enumerate}
+  \item $\opair{\clFor}{\pE(\rvx,\rvy)}$ is an \structe{inner product space}. Proof: \prefpp{thm:prb_vspace}.
+
+  \item Because $\opair{\clFor}{\pE(\rvx,\rvy)}$ is an \structe{inner product space}, the 
+        \ineqe{Generalized triangle inequality} follows \xref{thm:norm_tri}.
+\end{enumerate}
+\end{proof}
+
+%---------------------------------------
+\begin{theorem}[\thmd{Cauchy-Schwartz Inequality}]
+\footnote{
+  \citerpgc{wasserman2013}{66}{9780387217369}{``4.8 Theorem (Cauchy-Schwartz Inequality)."}
+  }
+%---------------------------------------
+Let $\ps$ be a \structe{probability space} with \ope{expectation} functional $\pE$.
+\thmbox{ \abs{\pE\brp{\rvX\rvY^\ast}}^2
+          \le  \pE\brp{\rvX\rvX^\ast}\:\pE\brp{YY^\ast}
+  }
+\end{theorem}
+\begin{proof}
+\begin{enumerate}
+  \item $\opair{\clFor}{\pE(\rvx,\rvy)}$ is an \structe{inner product space}. Proof: \prefpp{thm:prb_vspace}.
+
+  \item Because $\opair{\clFor}{\pE(\rvx,\rvy)}$ is an \structe{inner product space}, the \ineqe{Cauchy-Schwartz inequality} 
+        follows \xref{thm:cs}.
+\end{enumerate}
+\end{proof}
+
+%=======================================
+\section{Conditional expectation}
+%=======================================
+Sometimes the problem of finding the expected value of a \fncte{random variable} $\rvX$
+can be simplified by ``conditioning $\rvX$ on $\rvY$".
+It has already been pointed out in \prefpp{sec:pE_defs} 
+that the expected value $\pEx\rvX$  of $\rvX$ is \textbf{not random}.
+On the other hand, 
+note that $\pE(\rvX|\rvY)$ \textbf{is random}.
+This is because $\pE(\rvX|\rvY)$ is a function of $\rvY$.
+That is, once we know that $\rvY$ equals some fixed value $y$
+(like $0$ or $2.7$ or $-5.1$) then $\pE(\rvX|\rvY=y)$ is also fixed.
+However, if we don't know the value of $\rvY$,
+then $\rvY$ is still a \fncte{random variable} and the expression $\pE(\rvX|\rvY)$
+is also random (a function of \fncte{random variable} $\rvY$).
+
+%---------------------------------------
+\begin{theorem}
+\footnote{
+  \citerpc{jazwinski1970}{40}{``Theorem 2.9 (Conditional Expectations)"},
+  \citerpg{jazwinski2007}{40}{9780486318196} %{``Theorem 2.9 (Conditional Expectations)"}
+  }
+%---------------------------------------
+Let $\rvX$ and $\rvY$ be \fncte{random variable}s. Then
+\thmbox{\pEx{\rvX} = \pEy\pEx[x|y](\rvX|\rvY) }
+\end{theorem}
+\begin{proof}
+\begin{align*}
+   \pEy\pEx[x|y](\rvX|\rvY)
+     &\eqd \pEy \brs{ \int_{x\in\R}x \pp(\rvX=x|\rvY) \dx}
+     && \text{by definition of $\pE$}
+     && \text{\xref{def:pE}}
+   \\&\eqd \int_{y\in\R} \brs{\int_{x\in\R}x \pp(x|\rvY=y) \dx } \pp(y) \dy
+     && \text{by definition of $\pE$}
+     && \text{\xref{def:pE}}
+   \\&=    \int_{y\in\R} \int_{x\in\R}x \pp(x|y)\pp(y) \dx   \dy
+   \\&=    \int_{x\in\R}x \int_{y\in\R} \pp(x,y) \dy   \dx
+     && \text{by \prefp{thm:pdf_cond}}
+   \\&=    \int_{x\in\R}x \pp(x) \dx
+     && \text{by \prefp{thm:pdf_cond}}
+   \\&\eqd \pEx\rvX
+     && \text{by definition of $\pE$}
+     && \text{\xref{def:pE}}
+\end{align*}
+\end{proof}
