graphmath announcement on math.stackexchange

--- a/graphmath/category.tex
+++ b/graphmath/category.tex
@@ -217,7 +217,10 @@
 %\graphic{sunspots_welchPSD_4segs}
 
 \section{DSP: common/math/graphics/dsp}
-%\graphic{cendiff}
+ \graphic{cendiff}
+ \graphic{diff}
+ \graphic{IntSum}
+ \graphic{IntTrap}
 %\graphic{complex}
 %\graphic{cosLcos}
 %\graphic{deriv2rphi}
@@ -232,15 +235,12 @@
  \graphic{iir1pole}
  \graphic{iir2n}
  \graphic{iir2rphi}
-%\graphic{diff}
  \graphic{hpfwc}
  \graphic{lpfwc}
  \graphic{hanninghp50}
  \graphic{hanninglp16}
  \graphic{hanninglp50}
 %\graphic{imarks8pz}
-%\graphic{IntSum}
-%\graphic{IntTrap}
 %\graphic{linear}
 %\graphic{nonti}
  \graphic{pz_allpass}
