high resolution ADL5387 diagram

--- a/common/randseq.tex
+++ b/common/randseq.tex
@@ -229,17 +229,26 @@ we have three canonical forms. These can be shown to be equivalent:
 Note that in these equivalent forms, the \fncte{complex envelope} $\fx_l(t)$ is conveniently represented
 as a \prope{complex-valued} function in terms of the \fncte{quadrature component} $\fp(t)$ and the 
 \fncte{inphase component} $\fq(t)$ such that $\fx_l(t)=\fp(t)+i\fq(t)$.
+\end{remark}
 
+%---------------------------------------
 \begin{minipage}{\tw-60mm}
+\begin{example}
+%---------------------------------------
 In practice (with real hardware), you will likely first have access to
 the quadrature components $\fp(t)$ and $\fq(t)$.
 Take for example the \hie{Analog Devices ADL5387 Quadrature Demodulator} and
 evaluation board, as illustrated to the right.\footnotemark
 Note that \fncte{quadrature component} $\fp(t)$ is available at connector ``Q OUTPUT"
      and  \fncte{inphase component}    $\fq(t)$ is available at connector ``I OUTPUT".
-\end{minipage}\hfill\tbox{\includegraphics[width=55mm]{../common/ic/ADL5387.jpg}}
-\footnotetext{diagram copied from \citeP{ADL5387}}
-\end{remark}
+\end{example}
+\end{minipage}\hfill\tbox{\includegraphics[width=55mm]{../common/ic/ADL5387_page24_schematic.pdf}}
+\footnotetext{Diagram extracted from \citeP{ADL5387}.
+Extraction notes:{\scriptsize
+\verb|pdftk ADL5387.pdf cat 24 output page24.pdf|\\
+\verb|pdfcrop --margins "-50 -120 -60 -260" --clip page24.pdf image.pdf|\\
+\verb|gswin32c.exe -sDEVICE=pdfwrite -dNOPAUSE -dBATCH -dSAFER -dCompatibilityLevel=1.5 -sOutputFile=ADL5387_page24_schematic.pdf image.pdf| % https://superuser.com/questions/184288/how-to-convert-a-pdf-document-to-an-older-version
+}}
 
 %---------------------------------------
 \begin{proposition}
