--- a/common/expectation.tex
+++ b/common/expectation.tex
@@ -591,7 +591,7 @@ Let $\rvX$ be a \fncte{random variable}.
            & rvX_n &\sim& N(0,1)    &
   \end{array}}
   \quad\implies\quad
-  \brb{\psP\brp{\abs{\rvX}>x} \le \sqrt{frac{2}{\pi}} \frac{e^{-x^2/2}}{x}
+  \brb{\psP\brp{\abs{\rvX}>x} \le \sqrt{\frac{2}{\pi}} \frac{e^{-x^2/2}}{x}
       }
   }
 \end{theorem}
