--- a/common/intro.tex
+++ b/common/intro.tex
@@ -142,7 +142,7 @@ but by the measure of beauty that it helps create.
 
 \qboxnps
   {
-    Freeman Dyson (1923--), physicist and mathematician  %(January 1994)
+    Freeman Dyson (1923--2020), physicist and mathematician  %(January 1994)
     \index{Dyson, Freeman}
     \index{quotes!Dyson, Freeman}
     \footnotemark
