--- a/common/norm_minimization.tex
+++ b/common/norm_minimization.tex
@@ -561,7 +561,7 @@ for the climate measurements illustrated in \prefpp{fig:global-temp}.
        0.00000034336
     \end{array}}
 \end{align*}}
-Using this polynomial, we could ``predict"/estimate (not necessarily a very well)
+Using this polynomial, we could ``predict"/estimate (not necessarily very well)
 what the temperature deviation will be
 in 2030 (+1.1710) and was in 1870 (-0.23711).
 \begin{lstlisting}[language=matlab]
