--- a/common/wavelets/wavstrct.tex
+++ b/common/wavelets/wavstrct.tex
@@ -5,27 +5,9 @@
 %======================================
 \chapter{Wavelet Structures}
 %======================================
-\qboxnpqt
-  { Jules Henri Poincar\'e (1854-1912), physicist and mathematician
-    \index{Poincar\'e, Jules Henri}
-    \index{quotes!Poincar\'e, Jules Henri}
-    \footnotemark
-  }
-  {../common/people/small/poincare.jpg}
-  {\ldots on fait la science avec des faits comme une maison avec des pierres ; 
-   mais une accumulation de faits n'est pas plus une science qu'un tas de 
-   pierres n'est une maison.}
-  {Science is built up of facts, as a house is built of stones;
-   but an accumulation of facts is no more a science than a heap of stones is a house.}
-  \citetblt{
-    quote:       & \citerc{poincare_sah}{Chapter IX, paragraph 7} \\
-    translation: & \citerp{poincare_sah_eng}{141} \\
-    image:       & \url{http://www-groups.dcs.st-and.ac.uk/~history/PictDisplay/Poincare.html}
-    }
-
 \qboxnps
   {
-    Freeman Dyson (1923--), physicist and mathematician  %(January 1994)
+    Freeman Dyson (1923--2020), physicist and mathematician  %(January 1994)
     \index{Dyson, Freeman}
     \index{quotes!Dyson, Freeman}
     \footnotemark
